--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <p class="end">CopyRight By Shiladitya Suman</p>
+        <p class="end">CopyRight By Shiladitya Suman Suman</p>
     </footer>
-    <script src="j.js"></script>
 </body>
 </html>
