--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
 
             </ul>
-            <a href="https://www.youtube.com/channel/UCw3IoNeMmhou3GvzVfG1C7Q" class="btn">Subscribe</a> 
+            <a href="https://www.youtube.com/channel/UCw3IoNeMmhou3GvzVfG1C7Q"  target="_blank" class="btn">Subscribe</a> 
         </nav>
         <div class="content">
             <h4>Hello, my name is</h4>
@@ -103,9 +103,9 @@
         <p>Shiladitya Suman</p>
         <p>For more HTML, CSS, and coding tutorial - please click on the link below to connect</p>
         <div class="social">
-            <a href="https://www.facebook.com/shiladitya.suman?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://instagram.com/x_mr_suman_x?igshid=OTk0YzhjMDVlZA=="><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/shiladitya-suman-29829a233"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/shiladitya.suman?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://instagram.com/x_mr_suman_x?igshid=OTk0YzhjMDVlZA==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/shiladitya-suman-29829a233" target="_top"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <p class="end">CopyRight By Shiladitya Suman</p>
     </footer>
